Match default and custom placeholders and ensure input width works on mobile too.

--- a/less/components/call-tool.less
+++ b/less/components/call-tool.less
@@ -2,6 +2,10 @@
   background: #42FEFD;
   padding: 18px 0;
   text-align: center;
+  section {
+    padding: 0 0.5rem;
+    max-width: 1000px;
+  }
   select {
     opacity: 0;
     cursor: pointer;
@@ -24,6 +28,7 @@
   .phone-number-input-container {
     display: inline-block;
     white-space: nowrap;
+    font-size: 0.75rem;
 
     &:not(.valid) {
       @bw: 2px;
@@ -40,7 +45,7 @@
   .select-container {
     position: relative;
     display: inline-block;
-    height: 40px;
+    height: 1.8rem;
     border: 1px solid #000000;
     border-right: none;
     overflow: hidden;
@@ -48,6 +53,10 @@
     select {
       outline: none;
       user-select: none;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
   .try-again {
@@ -56,11 +65,12 @@
   .input-container {
     position: relative;
     display: inline-block;
-    height: 40px;
+    height: 1.8rem;
     border: 1px solid #000000;
     border-left: none;
     overflow: hidden;
-    min-width: 250px;
+    min-width: 223px;
+    max-width: 17.2rem;
 
     input {
       outline: none;
@@ -70,6 +80,22 @@
       left: 0;
       top: 0;
       height: 100%;
+
+      &::-webkit-input-placeholder {
+        opacity: 0.4 !important;
+      }
+
+      &:-moz-placeholder { /* Firefox 18- */
+        opacity: 0.4 !important;
+      }
+
+      &::-moz-placeholder {  /* Firefox 19+ */
+        opacity: 0.4 !important;
+      }
+
+      &:-ms-input-placeholder {
+        opacity: 0.4 !important;
+      }
     }
   }
   .placeholder-container {
@@ -78,8 +104,9 @@
     pointer-events: none;
     display: inline-flex;
     align-items: center;
-    opacity: 0.5;
+    opacity: 0.4;
     font-family: sans-serif;
+    font-weight: 400;
   }
   .placeholder-width {
     height: 100%;
@@ -88,18 +115,14 @@
     opacity: 0;
   }
   .country-prefix-display {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    background: #FFFFFF;
     height: 100%;
+    background: #FFFFFF;
     padding-left: 0.4rem;
     display: inline-flex;
     align-items: center;
-    padding-top: 0.136rem;
   }
   .fa-caret-down {
     margin-left: 0.2rem;
-    margin-right: 0.6rem;
+    margin-right: 0.4rem;
   }
 }
