--- a/less/shared.less
+++ b/less/shared.less
@@ -125,7 +125,7 @@ a.button {
 }
 
 button, .button-styling {
-  height: 40px;
+  height: 1.8rem;
   margin: 0 auto;
   padding: 0 60px;
   cursor: pointer;
